# iterm2-api-wrapper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/api/: alert.rst  cli.rst  client.rst  gateway.rst  index.rst  platform_macos.rst  setup.rst  state.rst  utils.rst
src/iterm2_api_wrapper/: __init__.py  alert.py  cli.py  client.py  connection.py  gateway.py  main.py  param_types.py  runtime_setup.py  setup.py  state.py  typings.py  utils.py
src/iterm2_api_wrapper/_logging/: config.py  logger.py
src/iterm2_api_wrapper/logging/: __init__.py  config.py  logger.py  styles.py
src/iterm2_api_wrapper/mac/: platform_macos.py
src/iterm2_api_wrapper/mac/applescripts/: iterm_osa.applescript  iterm_osa.scpt  logging_osa.applescript  logging_osa.scpt
src/iterm2_scripts/: __init__.py  cli.py  main.py  message.py  utils.py  webview_server.py
tests/: __init__.py  conftest.py  test_client.py  test_client_integration.py  test_gateway.py  test_iterm2_scripts.py  test_state_markers.py
