[project]
name = "iterm2-scripts"
version = "0.1.0"
description = "..."
readme = "README.md"
authors = [
  {name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com"}
]
maintainers = [
  {name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
    "typer",
    "pytest",
    "pytest-cov",
    "iterm2>=2.13",
    "aiohttp>=3.9",
    "mcp[cli]>=1.25.0",
]
requires-python = ">= 3.13"

[project.optional-dependencies]
custom_packages = [
  "pkg-registry"
]


[dependency-groups]
dev = [
    "rust-just",
    "cookiecutter>=2.6.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
    "sphinx",
    "furo",
    "pytest",
    "icecream",
    "rich",
    "myst-parser>=4.0.1",
]


[build-system]
requires = ["uv_build >= 0.9.15, <0.10.0"]
build-backend = "uv_build"


[project.urls]
bugs = "https://github.com/iLiftALot/iterm2_scripts/issues"
changelog = "https://github.com/iLiftALot/iterm2_scripts/blob/master/changelog.md"
homepage = "https://github.com/iLiftALot/iterm2_scripts"

[project.scripts]
iterm2_scripts = "iterm2_scripts.cli:app"
it2s = "iterm2_scripts.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest.log"
log_file_mode = "a"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-vv -l -x"
# Option	            Description
# -v or -vv	          Verbose output
# -l or --showlocals	Show local variables in tracebacks
# -ll                 Show all locals in tracebacks
# -s	                Don't capture stdout (show print statements)
# --tb=long           Full tracebacks
# --tb=short	        Shorter tracebacks
# --tb=no	            No tracebacks
# -x	                Stop on first failure
# --ff	              Run failed tests first
# -q	                Quiet mode
# --durations=10	    Show 10 slowest tests

[tool.uv]
package = true

[tool.uv.sources]
pkg-registry = { path = "../custom/pkg_registry", editable = true }
